--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "web-deneme-main",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,5 +18,7 @@
   "homepage": "https://github.com/Erennalcakar/web-deneme-main#readme",
   "dependencies": {
     "firebase": "^9.15.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
